--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <div id="left">
-      <iframe id="leftFrame" src="file:///Users/sahiltrikha/dev/nnn/google/regular%20search/Google.html" width=100% height=100%></iframe>
+
+    <div id="search">
+      <div id="left">
+        <iframe id="leftFrame" src="file:///Users/sahiltrikha/dev/nnn/google/regular%20search/Google.html" width=100% height=500px></iframe>
+      </div>
+
+      <div id="right">
+        <iframe src="file:///Users/sahiltrikha/dev/nnn/google/modified%20search/Google%20homepage.html" width=100% height=500px></iframe>
+      </div>
+
     </div>
-    <div id="right">
-      <iframe src="file:///Users/sahiltrikha/dev/nnn/google/modified%20search/Google%20homepage.html" width=100% height=100%></iframe>
-    </div>
+
+  <script type="text/javascript" src="skrollr.min.js"></script>
+    <script type="text/javascript">
+      var s = skrollr.init();
+    </script>
+  <script type="text/javascript" src="functions.js"></script>
+
+  <div data-0="background-color:rgb(0,0,255);" data-500="background-color:rgb(255,0,0);">WOOOT</div>
+
   </body>
 
-  <script type="text/javascript" src="functions.js"></script>
 
 </html>
