--- a/test.html
+++ b/test.html
@@ -4,17 +4,61 @@
     <title>Net Not Neutral</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <body>
+  <body> 
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <div data-0="background-color:rgb(0,0,255);" data-500="background-color:rgb(255,0,0);">WOOOT</div>
+            <div id="preload">
+          <img src="./Demo - Simple parallax scrolling tutorial_files/bcg_slide-1.jpg">
+          <img src="./Demo - Simple parallax scrolling tutorial_files/bcg_slide-2.jpg">
+          <img src="./Demo - Simple parallax scrolling tutorial_files/bcg_slide-3.jpg">
+          <img src="./Demo - Simple parallax scrolling tutorial_files/bcg_slide-4.jpg">
+        </div>
 
-  </body>
+    <section id="slide-1" class="homeSlide" style="height: 679px;">
+      <div class="bcg skrollable skrollable-before"
+        data-center="background-position: 50% 0px;"
+        data-top-bottom="background-position: 50% -100px;"
+        data-anchor-target="#slide-1"
+        style="background-position: 50% 0px;"
+      >
+        <div class="hsContainer">
+            <div class="hsContent skrollable skrollable-before" data-center="bottom: 200px; opacity: 1" data-top="bottom: 1200px; opacity: 0" data-anchor-target="#slide-1 h2" style="bottom: 200px; opacity: 1;">
+              <h2>Simple parallax scrolling is...</h2>
+            </div>
+          </div>
+      </div>
+    </section>
+  
+    <section id="slide-2" class="homeSlide" style="height: 679px;">
+      <div class="bcg skrollable skrollable-before" data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;" data-bottom-top="background-position: 50% 100px;" data-anchor-target="#slide-2" style="background-position: 50% 100px;">
+        <div class="hsContainer">
+          <div class="hsContent skrollable skrollable-before" data-center="opacity: 1" data-center-top="opacity: 0" data--100-bottom="opacity: 0;" data-anchor-target="#slide-2" style="opacity: 0;">
+            <h2>great for story telling websites.</h2>
+          </div>
+          </div>
+      </div>
+    </section>
+  
+    <section id="slide-3" class="homeSlide" style="height: 679px;">
+      <div class="bcg skrollable skrollable-before" data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;" data-bottom-top="background-position: 50% 100px;" data-anchor-target="#slide-3" style="background-position: 50% 100px;">
+        <div class="hsContainer">
+          <div class="hsContent skrollable skrollable-before" data--50-bottom="opacity: 0;" data--200-bottom="opacity: 1;" data-center="opacity: 1" data-200-top="opacity: 0" data-anchor-target="#slide-3 h2" style="opacity: 0;">
+            <h2>Now go and create your own story</h2>
+          </div>
+        </div>
+          
+      </div>
+    </section>
 
-  <script type="text/javascript" src="skrollr/src/skrollr.js"></script>
-  <script type="text/javascript">
-    var s = skrollr.init();
-  </script>
-  <script type="text/javascript" src="functions.js"></script>
-
+    <section id="slide-4" class="homeSlide" style="height: 679px;">
+      <div class="bcg skrollable skrollable-before" data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;" data-bottom-top="background-position: 50% 100px;" data-anchor-target="#slide-4" style="background-position: 50% 100px;">
+        <div class="hsContainer">
+          <div class="hsContent skrollable skrollable-before" data-bottom-top="opacity: 0" data-25p-top="opacity: 0" data-top="opacity: 1" data-anchor-target="#slide-4" style="opacity: 0;">
+            <h2>and share mine.</h2>
+          <div class="fb-like fb_iframe_widget" data-href="http://ihatetomatoes.net/simple-parallax-scrolling-tutorial/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true" fb-xfbml-state="rendered" fb-iframe-plugin-query="action=like&amp;app_id=580445718641008&amp;href=http%3A%2F%2Fihatetomatoes.net%2Fsimple-parallax-scrolling-tutorial%2F&amp;layout=button_count&amp;locale=en_US&amp;sdk=joey&amp;share=true&amp;show_faces=false"><span style="vertical-align: bottom; width: 120px; height: 20px;"><iframe name="f2df7df55c" width="1000px" height="1000px" frameborder="0" allowtransparency="true" scrolling="no" title="fb:like Facebook Social Plugin" src="./Demo - Simple parallax scrolling tutorial_files/like.html" class="" style="border: none; visibility: visible; width: 120px; height: 20px;"></iframe></span></div>
+          <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" src="./Demo - Simple parallax scrolling tutorial_files/tweet_button.1397013065.html" class="twitter-share-button twitter-tweet-button twitter-count-none" title="Twitter Tweet Button" data-twttr-rendered="true" style="width: 56px; height: 20px;"></iframe>
+          </div>
+        </div>
+          
+      </div>
+    </section>
 </html>
